# screen-time-tracker

./: .gitignore  package-lock.json  package.json
src/: i18n.json  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
