[package]
name = "kairos-screen-time-tracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.9"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
sysinfo = "0.30"
battery = "0.7"
nvml-wrapper = "0.10"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows = { version = "0.54", features = ["Win32_Foundation"] }
